src/objects/APXT_BPM__Scheduled_Conductor_History__c.object
<CustomObject>
    <fields>
        <fullName>APXT_BPM__Conga_Conductor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conga Conductor</label>
        <referenceTo>APXT_BPM__Conductor__c</referenceTo>
        <relationshipLabel>Scheduled Conductor History</relationshipLabel>
        <relationshipName>Scheduled_Conductor_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Dashboard_Link__c</fullName>
        <description>A link to the Conductor Dashboard for this schedule.</description>
        <label>Dashboard Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Number_of_Failures__c</fullName>
        <label>Number of Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Number_of_Service_Events__c</fullName>
        <label>Number of Service Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Number_of_Successes__c</fullName>
        <label>Number of Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Output_File_Link__c</fullName>
        <label>Output File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Ran_as__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ran as</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Conga_Conductor_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APXT_BPM__Total_Number_of_Records__c</fullName>
        <label>Total Number of Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scheduled Conductor History</label>
    <nameField>
        <label>History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Conductor History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>